--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.2.5",
     "nodemon": "^3.1.10",
     "pinia": "^3.0.3",
+    "primevue": "^4.4.1",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
   },
