--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@primeuix/themes": "^1.2.5",
+    "@primevue/core": "^4.4.1",
+    "@vueup/vue-quill": "^1.2.0",
     "axios": "^1.13.2",
     "nodemon": "^3.1.10",
     "pinia": "^3.0.3",
     "primeicons": "^7.0.0",
     "primevue": "^4.4.1",
+    "quill": "^2.0.3",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
   },
