--- a/package.json
+++ b/package.json
@@ -13,9 +13,16 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@primeuix/themes": "^1.2.5",
+    "@vue-email/components": "^0.0.21",
+    "@vue-email/render": "^0.0.9",
     "axios": "^1.13.2",
+    "dotenv": "^17.2.3",
+    "email-js": "^2.0.3",
+    "emailjs": "^4.0.3",
     "nodemon": "^3.1.10",
+    "pg": "^8.16.3",
     "pinia": "^3.0.3",
     "primeicons": "^7.0.0",
     "primevue": "^4.4.1",
