--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemon": "^3.1.10",
     "pg": "^8.16.3",
     "pinia": "^3.0.3",
+    "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primevue": "^4.4.1",
     "quill": "^2.0.3",
