--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^17.2.3",
     "email-js": "^2.0.3",
     "emailjs": "^4.0.3",
+    "express": "^5.2.1",
     "nodemon": "^3.1.10",
     "pg": "^8.16.3",
     "pinia": "^3.0.3",
@@ -29,6 +30,8 @@
     "primeicons": "^7.0.0",
     "primevue": "^4.4.1",
     "quill": "^2.0.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "vue": "^3.5.22",
     "vue-quill": "^1.5.1",
     "vue-router": "^4.5.1"
