préparation migration vers db mongo

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "email-js": "^2.0.3",
     "emailjs": "^4.0.3",
     "express": "^5.2.1",
+    "mongodb": "^7.1.0",
+    "node": "^25.7.0",
     "nodemon": "^3.1.10",
     "pg": "^8.16.3",
     "pinia": "^3.0.3",
