--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-.DS_Store
+ backend/node_modules
+    .DS_Store
 dist
 dist-ssr
 coverage
@@ -21,6 +22,7 @@ coverage
 .vscode/*
 !.vscode/extensions.json
 .idea
+/backend/.idea
 *.suo
 *.ntvs*
 *.njsproj
@@ -30,3 +32,5 @@ coverage
 *.tsbuildinfo
 
 /src/.env
+/backend/.env
+*.env
